# forge

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
assets/examples/: aaaaa.yml  newScene.yml  testing.yml  with_cam.yml  yaaaa.yml  yeet.yml
assets/models/game-models/Bart/: Thumbs.db
assets/models/game-models/Knight Artorias/: c4100.mtl
assets/models/game-models/link/: link.mtl
assets/models/primitives/cone/: cone.mtl
assets/models/primitives/cube/: cube.mtl
assets/models/primitives/cylinder/: cylinder.mtl
assets/models/primitives/plane/: plane.mtl
assets/models/primitives/sphere/: sphere.mtl
shaders/: frag.glsl  vert.glsl
shaders/framebuffer/: frag.glsl
shaders/grid/: frag.glsl  vert.glsl
shaders/light/: frag.glsl
src/: main.cpp
src/camera/: Camera.cpp  Camera.h
src/editor/: Editor.cpp  Editor.h
src/editor/camera/: Camera.h  ViewportCamera.h
src/editor/entity/: Entity.h  EntityType.h
src/editor/entity/camera/: EditorCamera.cpp  EditorCamera.h
src/editor/entity/light/: Light.cpp  Light.h
src/editor/entity/mesh/: Model.h
src/editor/entity/mesh/helpers/: Mesh.h  Vertex.h
src/editor/imgui-layer/: GuiLayer.cpp  GuiLayer.h
src/editor/light/: Light.h
src/editor/light/directional/: DirectionalLight.cpp  DirectionalLight.h
src/editor/light/point/: PointLight.cpp  PointLight.h
src/editor/light/spot/: SpotLight.cpp  SpotLight.h
src/editor/mesh/: Mesh.h  Model.h
src/editor/mesh/helpers/: Vertex.h
src/editor/mesh/material/: Material.cpp  Material.h
src/editor/renderer/: Renderer.cpp  Renderer.h
src/editor/renderer/framebuffer/: Framebuffer.cpp  Framebuffer.h
src/editor/renderer/screen/: ScreenTexture.cpp  ScreenTexture.h
src/editor/renderer/window/: Window.h
src/editor/scene/: Scene.cpp  Scene.h
src/editor/scene/entity/: Entity.cpp  Entity.h
src/editor/scene/entity/transform/: Transform.cpp  Transform.h
src/editor/settings/: Settings.cpp  Settings.h
src/editor/settings/keymap/: Keymap.cpp  Keymap.h
src/editor/skybox/: Skybox.cpp  Skybox.h  skybox.cpp
src/editor/ui/: UIManager.cpp  UIManager.h
src/editor/ui/ModalManager/: ModalManager.cpp  ModalManager.h
src/editor/ui/imgui-layer/: GuiLayer.cpp  GuiLayer.h
src/editor/ui/textures/: UITexture.cpp  UITexture.h
src/editor/utils/: SerializableInterface.h  Serializer.cpp  Serializer.h
src/editor/utils/imgui-layer/: GuiLayer.h
src/editor/utils/shader-manager/: Shader.cpp  Shader.h
src/editor/window/: Window.cpp  Window.h
src/light/: Light.h
src/mesh/: Mesh.cpp  Mesh.h  Model.cpp  Model.h  Scene.cpp  Scene.h
src/mesh/helpers/: Texture.h  Vertex.h
src/skybox/: skybox.h
src/utils/: Serializer.cpp  Serializer.h
src/utils/imgui-layer/: GuiLayer.cpp  GuiLayer.h  ImGuiLayer.cpp  ImGuiLayer.h
src/utils/shader-manager/: Shader.cpp  Shader.h
src/window/: Window.cpp
